--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "compromise": "^10.7.2",
     "express": "^4.16.2",
     "path": "^0.12.7",
     "pg-promise": "^7.0.1",
