--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "homepage": "https://github.com/candacerogue/ideception#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "path": "^0.12.7",
     "cheerio": "^1.0.0-rc.2",
     "compromise": "^10.7.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "path": "^0.12.7",
     "pg-promise": "^7.0.1",
     "request": "^2.83.0"
   }
