--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.2",
     "path": "^0.12.7",
     "pg-promise": "^7.0.1",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5"
   }
 }
