--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.2",
     "compromise": "^10.7.2",
     "express": "^4.16.2",
+    "faker": "^4.1.0",
     "path": "^0.12.7",
     "pg-promise": "^7.0.1",
     "request": "^2.83.0",
