--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react": "^16.0.0",
     "react-d3-cloud": "^0.5.0",
     "react-dom": "^16.0.0",
+    "react-form": "^1.3.0",
     "react-scripts": "1.0.14"
   },
   "scripts": {
